--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
-  "name": "my-task-backend",
+  "name": "my-task",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.16"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.7"
-  }
+  "keywords": [
+    "task"
+  ],
+  "author": "ItsDavidHdez",
+  "license": "MIT"
 }
