--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^2.0.7"
   },
   "scripts": {
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
